-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 13, 14
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245613 | 13.0.4 | Martin Doerr | P4 | Resolved | Fixed | b02 |
| JDK-8234970 | 11.0.7 | Martin Doerr | P4 | Resolved | Fixed | b01 |
During lookup of critical JNI functions (CriticalJNINatives) we execute OS functions to deal with dlls (e.g. dlopen, dlsym). These functions need to perform I/O which may be slow.
The current implementation executes these functions while the thread is in state "_thread_in_vm". This means that the thread blocks safepoints while performing I/O.
In order to reduce safepoint delays, I/O should be executed while the thread is in state "_thread_in_native" which avoids blocking safepoints.
The current implementation executes these functions while the thread is in state "_thread_in_vm". This means that the thread blocks safepoints while performing I/O.
In order to reduce safepoint delays, I/O should be executed while the thread is in state "_thread_in_native" which avoids blocking safepoints.
- backported by
-
JDK-8234970 CriticalJNINatives: dll handling should be done in native thread state
-
- Resolved
-
-
JDK-8245613 CriticalJNINatives: dll handling should be done in native thread state
-
- Resolved
-