8229236: CriticalJNINatives: dll handling should be done in native thread state

Temporarily switch thread state from _thread_in_vm to _thread_in_native to execute I/O.

Reviewed-by: dlong, dholmes